# ECAI-SCC-

./: .gitignore  README.en.md  README.md  创新点.docx  方案.docx  方案.md  项目介绍.docx
ElderCareAI/: .gitignore  BUILD_INSTRUCTIONS.md  DOWNLOAD_TINY_MODEL.md  DOWNLOAD_WHISPER_CPP_NOW.md  INTELLIGENT_FEATURES.md  LLM_SETUP.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  ROOM_TEST.md  Server_Weekly_Report_Architecture.md  TODO_ROADMAP.md  WHISPER_REAL_SETUP.md  build.sh  build_err.txt  download_paddle_ocr_models.ps1  download_tiny_model.ps1  download_whisper_cpp.ps1  download_whisper_model.ps1  find_android_sdk.bat  gradle.properties  integrate_whisper.ps1  local.properties  reinstall.ps1  settings.gradle.kts  项目计划书.md
ElderCareAI/app/: build.gradle.kts  proguard-rules.pro
ElderCareAI/app/release/: output-metadata.json
ElderCareAI/app/release/baselineProfiles/0/: app-release.dm
ElderCareAI/app/release/baselineProfiles/1/: app-release.dm
ElderCareAI/app/src/androidTest/java/com/eldercare/ai/: ElderCareDatabaseTest.kt
ElderCareAI/app/src/main/: AndroidManifest.xml
ElderCareAI/app/src/main/assets/fridge/: category.bin.param
ElderCareAI/app/src/main/assets/paddle_ocr/: README.txt
ElderCareAI/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ElderCareAI/app/src/main/cpp/common/: common.cpp  common.h
ElderCareAI/app/src/main/cpp/ocr/: paddle_ocr.cpp  paddle_ocr.h
ElderCareAI/app/src/main/cpp/whisper/: whisper_processor.cpp  whisper_processor.h  whisper_processor_real.cpp.example
ElderCareAI/app/src/main/cpp/yolo/: yolo_detector.cpp  yolo_detector.h
ElderCareAI/app/src/main/java/com/eldercare/ai/: ElderCareDatabaseProvider.kt  MainActivity.kt
ElderCareAI/app/src/main/java/com/eldercare/ai/auth/: SmsGatewayClient.kt  UserService.kt  VerificationCodeService.kt
ElderCareAI/app/src/main/java/com/eldercare/ai/companion/: ConversationManager.kt  EmotionAnalyzer.kt
ElderCareAI/app/src/main/java/com/eldercare/ai/data/: ElderCareDatabase.kt  SettingsManager.kt
ElderCareAI/app/src/main/java/com/eldercare/ai/fridge/: FoodDetector.kt  FridgeRepository.kt  ShelfLifeCalculator.kt
ElderCareAI/app/src/main/java/com/eldercare/ai/gemini/: GeminiService.kt
ElderCareAI/app/src/main/java/com/eldercare/ai/health/: HealthRiskEvaluator.kt
ElderCareAI/app/src/main/java/com/eldercare/ai/llm/: LlmConfig.kt  LlmExceptions.kt  LlmService.kt
ElderCareAI/app/src/main/java/com/eldercare/ai/network/: ApiClient.kt  BackendApi.kt
ElderCareAI/app/src/main/java/com/eldercare/ai/notification/: BootReceiver.kt  DailyReminderReceiver.kt  DailyReminderScheduler.kt
ElderCareAI/app/src/main/java/com/eldercare/ai/ocr/: DishKnowledgeMatcher.kt  DishNameExtractor.kt  MlKitOcrProcessor.kt  PaddleOcrProcessor.kt
ElderCareAI/app/src/main/java/com/eldercare/ai/rag/: DietKnowledgeRepository.kt  diet_knowledge.csv
ElderCareAI/app/src/main/java/com/eldercare/ai/tts/: TtsService.kt
ElderCareAI/app/src/main/java/com/eldercare/ai/utils/: ImageProcessor.kt
ElderCareAI/app/src/main/java/com/eldercare/ai/whisper/: AndroidSpeechRecognizer.kt  AudioRecorder.kt  WhisperProcessor.kt
ElderCareAI/app/src/main/java/com/eldercare/ai/yolo/: YoloDetector.kt
ElderCareAI/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
ElderCareAI/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
ElderCareAI/gradle/: libs.versions.toml
ElderCareAI/server/: README.md  pom.xml
ElderCareAI/server/src/main/java/com/eldercare/server/: ElderCareServerApplication.java
ElderCareAI/server/src/main/java/com/eldercare/server/config/: SecurityConfig.java
ElderCareAI/server/src/main/java/com/eldercare/server/controller/: AuthController.java  DiaryController.java  EmotionController.java  FridgeController.java  HealthController.java  ReportController.java  TestController.java
ElderCareAI/server/src/main/java/com/eldercare/server/entity/: DiaryEntry.java  EmotionLog.java  FamilyLinkRequest.java  FamilyRelation.java  FridgeItem.java  HealthProfile.java  User.java  WeeklyReport.java
ElderCareAI/server/src/main/resources/: application.properties
backend/: README.md  pom.xml
backend/src/main/java/com/eldercare/backend/: ElderCareBackendApplication.java
backend/src/main/java/com/eldercare/backend/common/: ApiResponse.java  GlobalExceptionHandler.java
backend/src/main/java/com/eldercare/backend/controller/: AuthController.java  DiaryController.java  FamilyController.java  LlmController.java  UserController.java
backend/src/main/java/com/eldercare/backend/dto/: AuthResponse.java  DiaryEntryDto.java  LoginRequest.java  RegisterRequest.java
backend/src/main/java/com/eldercare/backend/entity/: DiaryEntry.java  EmotionLog.java  FamilyLinkRequest.java  User.java
backend/src/main/java/com/eldercare/backend/repository/: DiaryEntryRepository.java  EmotionLogRepository.java  FamilyLinkRequestRepository.java  UserRepository.java
backend/src/main/java/com/eldercare/backend/security/: JwtAuthFilter.java  JwtUtil.java  SecurityConfig.java
backend/src/main/java/com/eldercare/backend/service/: AuthService.java  DiaryService.java  FamilyService.java  LlmProxyService.java  SmsService.java
backend/src/main/resources/: application.yml
codes/: settings.gradle.kts
codes/app/: build.gradle.kts
codes/app/src/androidTest/java/com/example/eldercareai/: ExampleInstrumentedTest.kt
codes/app/src/main/: AndroidManifest.xml
codes/app/src/main/java/com/example/eldercareai/: MainActivity.kt
codes/app/src/main/java/com/example/eldercareai/data/: .gitkeep  DishDao.kt  (+3 more)
codes/app/src/main/res/values/: strings.xml  themes.xml
codes/app/src/test/java/com/example/eldercareai/: ExampleUnitTest.kt
codes/gradle/wrapper/: gradle-wrapper.properties
documents/: fridge_food_data.csv  完整技术研究报告.docx  完整技术研究报告.md  技术研究报告.docx  技术研究报告_第4_5章.md  第十九届全国大学生软件创新大赛-技术研究报告模版.docx  第十九届全国大学生软件创新大赛-设计及创新性分析报告模版.docx  第十九届全国大学生软件创新大赛-项目开发文档模版.docx  第十九届全国大学生软件创新大赛-项目测试文档模版.docx  设计及创新性分析报告.docx  项目开发文档.docx
documents/RAG数据/: fridge_food_data.csv
附件6：第十九届全国大学生软件创新大赛-参赛作品提交材料参考模板/: 第十九届全国大学生软件创新大赛-项目计划书模板.docx
(+81 files in other folders)
